<resources>
    <string name="app_name">Bebop</string>
    <string name="facebook_app_id">205587269792400</string>
    <string name="join_group">Join group</string>
    <string name="join_existing_group">Join existing group</string>
    <string name="join">Join</string>
    <string name="create_group">Create group</string>
    <string name="create_new_group">Create new group</string>
    <string name="create">Create</string>
    <string name="group_name">Group Name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="group_format">Group name must be 3 to 16 characters, and may contain letters, numbers and special characters</string>
    <string name="password_format">Password must be 6 to 18 characters, and may contain letters, numbers and special characters</string>
    <string name="group_unavailable">Group name unavailable</string>
    <string name="invalid_group">Group not found</string>
    <string name="requires_password">Group requires password</string>
    <string name="missing_group">Missing group name</string>
    <string name="missing_password">Missing password</string>
    <string name="incorrect_group">Incorrect group name or password</string>
    <string name="find_music">Find music</string>
    <string name="keyword">Title, Artist, etc.</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="added">Song added to playlist</string>
    <string name="removed">Song removed from playlist</string>
    <string name="refresh">Playlist updated</string>
    <string name="song_exists">Song already in playlist</string>
    <string name="wait">Wait for one of your songs to finish before adding another song</string>
    <string name="connect">You are not connected to the internet</string>
    <string name="youtube_error">Failed to initialize Youtube</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google+</string>
    <string name="my_groups">My Groups</string>
    <string name="new_user">Welcome! \nFrom the menu you can create or join a group, and My Groups lets you see groups you have already joined.</string>
    <string name="dismiss">Dismiss</string>
    <string name="skip_song">Skipping song</string>
    <string name="rate">Rate</string>
    <string name="like_bebop">Do you like Bebop? \nLet us know what you think!</string>
    <string name="terms">Terms and Conditions</string>
</resources>