<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_existing_group"
            android:id="@+id/tvTitle"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textColor="#9e9e9e"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etGroupName"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#9e9e9e"
        android:maxLength="50"
        android:singleLine="true"
        android:textColor="#9e9e9e"
        android:textColorHint="#bdbdbd"
        android:textSize="18sp"
        android:hint="@string/group_name"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#9e9e9e"
        android:maxLength="50"
        android:singleLine="true"
        android:textColor="#9e9e9e"
        android:textColorHint="#bdbdbd"
        android:textSize="18sp"
        android:hint="@string/password"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:id="@+id/bCancel"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:textColor="#9e9e9e"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e0e0e0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/join"
            android:id="@+id/bJoin"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:textColor="#9e9e9e"
            android:textSize="18sp"
            android:textAllCaps="true"/>
    </LinearLayout>
</LinearLayout>