<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_bebop"
            android:id="@+id/tvTitle"
            android:layout_margin="15dp"
            android:textColor="#9e9e9e"
            android:textSize="18sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:id="@+id/bCancel"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:textColor="#9e9e9e"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e0e0e0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rate"
            android:id="@+id/bRate"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:textColor="#9e9e9e"
            android:textSize="18sp"
            android:textAllCaps="true"/>
    </LinearLayout>

</LinearLayout>