<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dayandnightstudio.bebop.SignInActivity"
    android:background="#2196F3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:id="@+id/tvTerms"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/ivLogo"
            android:src="@mipmap/bebop"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_facebook"
            android:id="@+id/bFacebook"
            android:textAllCaps="false"
            android:background="@drawable/fb_button"
            android:elevation="10dp"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_google"
            android:id="@+id/bGoogle"
            android:textAllCaps="false"
            android:background="@drawable/g_button"
            android:elevation="10dp"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>
