<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dayandnightstudio.bebop.MainActivity"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/rlActionBar"
        android:background="#2196F3"
        android:elevation="3dp">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:id="@+id/ibMenu"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:scaleType="fitXY"
            android:src="@mipmap/menu"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_groups"
            android:id="@+id/tvTitle"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlActionBar">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvGroup" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#64000000"
            android:id="@+id/rlMask"
            android:visibility="gone"></RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/rlMenu"
            android:background="#EEEEEE"
            android:visibility="gone">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/ivUserImage"
                    android:src="@mipmap/ic_launcher"
                    android:foreground="@mipmap/mask"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#BDBDBD"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/rlJoin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_group"
                        android:id="@+id/tvJoin"
                        android:textSize="18sp"
                        android:textColor="#9e9e9e"
                        android:layout_marginLeft="15dp"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#BDBDBD"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/rlCreate">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_group"
                        android:id="@+id/tvCreate"
                        android:textSize="18sp"
                        android:textColor="#9e9e9e"
                        android:layout_marginLeft="15dp"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#BDBDBD"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#BDBDBD"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/rlLogout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:id="@+id/tvLogout"
                        android:textSize="18sp"
                        android:textColor="#9e9e9e"
                        android:layout_marginLeft="15dp"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>
